Update to modern tech style with neon accents, glassmorphism, and futuristic design

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body>
     <!-- Floating WhatsApp Button -->
-    <a href="https://chat.whatsapp.com/YOUR_COMMUNITY_LINK" class="floating-whatsapp" target="_blank"
-        aria-label="Join WhatsApp Community">
+    <a href="https://wa.me/923006242000?text=Hi%2C%20I%20want%20to%20join%20your%20digital%20skills%20community"
+        class="floating-whatsapp" target="_blank" aria-label="Join WhatsApp Community">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -37,8 +37,8 @@
                     Graphic Designing, Digital Marketing aur WordPress Development seekhein<br>
                     aur real projects par kaam karne ka moka paayein
                 </p>
-                <a href="https://chat.whatsapp.com/YOUR_COMMUNITY_LINK" class="cta-button animate-fade-in-delay-2"
-                    target="_blank">
+                <a href="https://wa.me/923006242000?text=Hi%2C%20I%20want%20to%20join%20your%20digital%20skills%20community"
+                    class="cta-button animate-fade-in-delay-2" target="_blank">
                     <i class="fab fa-whatsapp"></i> Join Free WhatsApp Community
                 </a>
             </div>
@@ -172,7 +172,8 @@
                     <li><i class="fas fa-check"></i> Job aur project opportunities pehle janein</li>
                     <li><i class="fas fa-check"></i> Like-minded people se connect karein</li>
                 </ul>
-                <a href="https://chat.whatsapp.com/YOUR_COMMUNITY_LINK" class="cta-button-large" target="_blank">
+                <a href="https://wa.me/923006242000?text=Hi%2C%20I%20want%20to%20join%20your%20digital%20skills%20community"
+                    class="cta-button-large" target="_blank">
                     <i class="fab fa-whatsapp"></i> Join WhatsApp Community Now
                 </a>
             </div>
@@ -209,8 +210,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-envelope"></i> info@youragency.com</p>
-                    <p><i class="fas fa-phone"></i> +92 300 1234567</p>
+                    <p><i class="fas fa-envelope"></i> hanzladigitalagency@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +92 300 6242000</p>
                     <p><i class="fas fa-map-marker-alt"></i> Pakistan</p>
                 </div>
                 <div class="footer-section">
